Updated footer (added links for termsAndConditions.html and privacyPolicy.html; switched to fixed footer). Updated style.css to fix some visual issues on mobile browsers.

--- a/static/style.css
+++ b/static/style.css
@@ -201,3 +201,20 @@ ul
 {
    overflow-x: auto;
 }
+ @media only screen and (max-device-width: 610px) {
+       /* styles for browsers smaller than 610px - some mobile browsers*/
+       .div-forms
+       {
+        display: block;
+
+       }
+       .custom-forms
+       {
+         text-align: center;
+         padding-bottom: 2%;
+       }
+       .btn#generate_qrs, .btn#print_inventory, .btn#start_check, .btn#finish_check, .btn#submit
+       {
+        width: 400px;
+       }
+    }
